Refrences and Sections added

--- a/Text.tex
+++ b/Text.tex
@@ -1,14 +1,78 @@
 \section{Introduction}
-
+awf
 \section{Lateral Dynamics of Flexible Shaft}
-
-
+zsc
+\subsection{Modelling}
+zdc
+\subsubsection{Mechanical model}
+zd
+\subsubsection{Mathematical model}
+zxc
+\subsubsection{Convergence}
+xczs
+\subsection{Validation}
+sdv
+\subsection{Model adjustment}
+ase
 \section{Lateral Dynamics of Flexible Shaft and Discs}
-
-
+sdfxc
+\subsection{Modelling}
+zscz
+\subsubsection{Mechanical model}
+zscz
+\subsubsection{Mathematical model - one disc}
+zxcz
+\subsubsectionmark{Mathematical model - two discs}
+z d
+\subsection{Validation}
+zxc
+\subsection{Model adjustment}
+xdx
 \section{Modelling of Ball Bearing}
-
-
+xdv
+\subsubsection{First 8 natural frequencies}
+xdv
+\subsubsection{First 8 mode shapes}
+xcv
+\subsection{Prediction of critical speeds}
+zdf
+\subsubsection{Campbell diagram}
+cfb
+\subsubsection{First mode shapes}
+cfbcv
+\subsection{Unbalance response}
+cfbc
 \section{Modelling of Hydrodynamic Bearing}
-
-
+cfbcv
+\subsection{Hydrodynamic bearing - Properties}
+cvbf
+\subsubsection{Assumptions}
+xcbf
+\subsubsection{External static load}
+dfgv
+\subsubsection{Oil film thickness}
+gdrt
+\subsubsection{Stiffnes and damping}
+cvncn
+\subsection{Prediction of Critical Speed}
+dfg
+\subsubsection{First two critical speeds}
+hjkh
+\subsubsection{Operational range}
+fgj
+\subsection{Rotor Bearing Stability Limit}
+sdg
+\subsubsection{Maximum angular velocity}
+sdf
+\subsubsection{Frequency of unstable vibration}
+sdf
+\subsubsection{Ratio between unstable Frequency and angular velocity}
+ælkdsf
+\subsection{Unbalance response}
+sdf
+\subsection{Engeineering application}
+sdf
+\subsubsection{Extend maximum angular velocity}
+ælkaæslkæalskd
+\subsubsection{Procentile improvement}
+ælaksældk
