--- a/Text.tex
+++ b/Text.tex
@@ -71,6 +71,8 @@ zxc
 xdx
 \section{Modelling of Ball Bearing}
 xdv
+\subsection{Der skal nok stå noget her -----------zzzzzzzxxxxxx}
+ælk
 \subsubsection{First 8 natural frequencies}
 xdv
 \subsubsection{First 8 mode shapes}
