--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \usepackage{booktabs}   % Nice tables
 \usepackage{fancyhdr}   % Header package
 \usepackage{subcaption} % Multifigures
-\usepackage{adjustbox}  % To change width locally - Nice for wide tables
+\usepackage{chngpage}   % Adjustwidth
 
 \usepackage{biblatex}   % Refrences
 \addbibresource{References.bib}
