--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,7 @@
 \usetikzlibrary{arrows,calc,decorations.markings}
 \tikzset{every picture/.style={line width=0.8}}
 \tikzstyle{force}   = [very thick,-latex, ->]
+\tikzstyle{dim}     = [thick, -latex, |<->|]
 
 \usepackage{pgfplots}   % Plots
 \pgfplotsset{compat=1.6}
