--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \usepackage{fancyhdr}   % Header package
 \usepackage{subcaption} % Multifigures
 \usepackage{chngpage}   % Adjustwidth
+\usepackage{amsmath}    % Math
 
 \usepackage{biblatex}   % Refrences
 \addbibresource{References.bib}
